Final Project Submitted

--- a/Week 5/Farrukh_Capstone_Final.ipynb
+++ b/Week 5/Farrukh_Capstone_Final.ipynb
@@ -615,7 +615,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'AIzaSyCA5epm-aLzhWmIivxrVMo92mPaoTe7rMw'\n",
+    "API_KEY = 'API-KEY'\n",
     "import json"
    ]
   },
